
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef enum AVCodecID { ____Placeholder_AVCodecID } AVCodecID ;
__attribute__((used)) static int is_supported(enum AVCodecID id)
{
    switch(id) {
    case 156:
    case 155:
    case 154:
    case 153:
    case 152:
    case 151:
    case 146:
    case 144:
    case 143:
    case 162:
    case 148:
    case 147:
    case 141:
    case 140:
    case 136:
    case 139:
    case 138:
    case 137:
    case 135:
    case 134:
    case 133:
    case 145:
    case 158:
    case 157:
    case 130:
    case 131:
    case 129:
    case 128:
    case 161:
    case 160:
    case 159:
    case 150:
    case 149:
    case 132:
    case 142:
        return 1;
    default:
        return 0;
    }
}
